Continuous Grab not working properly on macOS (Sierra) #49498

Closed
opened 2016-09-30 14:11:01 +02:00 by asza · 20 comments

System Information
macOS Sierra (10.12)
Intel Iris Pro

Blender Version
Broken: (2.78 80837d0)
Worked: (none)

Short description of error
Viewport panning and rotation is broken (movement is super bumpy) on macOS Sierra only if continuous grab is enabled.

Exact steps for others to reproduce the error

  • in the settings panel under Input, activate the Continuous Grab option
  • pan or rotate the 3D viewport (movement should be bumpy)
  • by disabling Continuous Grab, viewport movement works as expected

Note
Trackpad gestures work fine. Using a regular mouse (middle-mouse-button + drag) triggers this behavior.

**System Information** macOS Sierra (10.12) Intel Iris Pro **Blender Version** Broken: (2.78 80837d0) Worked: (none) **Short description of error** Viewport panning and rotation is broken (movement is super bumpy) on macOS Sierra **only if** continuous grab is enabled. **Exact steps for others to reproduce the error** - in the settings panel under **Input**, activate the **Continuous Grab** option - pan or rotate the 3D viewport (movement should be bumpy) - by disabling **Continuous Grab**, viewport movement works as expected **Note** Trackpad gestures work fine. Using a regular mouse (middle-mouse-button + drag) triggers this behavior.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @qCring

Added subscriber: @qCring

#49514 was marked as duplicate of this issue

#49514 was marked as duplicate of this issue

#52006 was marked as duplicate of this issue

#52006 was marked as duplicate of this issue

Added subscribers: @MartijnBerger, @MikeErwin, @brecht, @mont29

Added subscribers: @MartijnBerger, @MikeErwin, @brecht, @mont29

sigh… macOS and UI is definitively a… complicated story :(

@brecht, @MikeErwin, @MartijnBerger, one of you guys has new macOS and want to investigate this?

*sigh*… macOS and UI is definitively a… complicated story :( @brecht, @MikeErwin, @MartijnBerger, one of you guys has new macOS and want to investigate this?
Member

Just upgraded to Sierra & Blender 2.78, mid-2012 MacBook Pro with GeForce GT 650M.

Trackpad pan / zoom / rotate works fluid for me, with or without Continuous Grab.

Just upgraded to Sierra & Blender 2.78, mid-2012 MacBook Pro with GeForce GT 650M. Trackpad pan / zoom / rotate works fluid for me, with or without Continuous Grab.
Member

Also fluid when using Intel HD 4000 on same system. With or without Continuous Grab.

This is the first report I've seen about regular trackpad problems. Do you have a Wacom plugged in? Those don't get along with Continuous Grab.

Also fluid when using Intel HD 4000 on same system. With or without Continuous Grab. This is the first report I've seen about regular trackpad problems. Do you have a Wacom plugged in? Those don't get along with Continuous Grab.
Author

Sorry I wasn't too clear on that. I'm using a regular mouse. This happens on MMB+Drag in the viewport. The trackpad works fine. But I guess that won't trigger continuous grab. Trackpad gestures seem not to be the same as MMB+Drag. But I'm just guessing here...

Sorry I wasn't too clear on that. I'm using a regular mouse. This happens on MMB+Drag in the viewport. The trackpad works fine. But I guess that won't trigger continuous grab. Trackpad gestures seem not to be the same as MMB+Drag. But I'm just guessing here...

Added subscriber: @daydream22

Added subscriber: @daydream22

Actually issue occurs whenever continuous grab is applied (scale, rotate, grab, ...). Trackpad works fine, wired mouse not. Interesting is, that when I use the very same mouse via bluetooth, it works correctly.

System information:
macOS 10.12.2
MacBook Pro (Retina, 13-inch, Early 2015)
Intel Isir Graphics 6100

Blender version: 2.77

Actually issue occurs whenever continuous grab is applied (scale, rotate, grab, ...). Trackpad works fine, wired mouse not. Interesting is, that when I use the very same mouse via bluetooth, it works correctly. **System information:** macOS 10.12.2 MacBook Pro (Retina, 13-inch, Early 2015) Intel Isir Graphics 6100 **Blender version:** 2.77

Added subscriber: @Horaci

Added subscriber: @Horaci

I can confirm this issue. When continuous grab is enabled, rotate, pan and zoom behaves erratically. Once it's disabled, it's smooth again.

System information:
macOS 10.12.5
Nvidia Titan X (Pascal)
Mouse: Razer Ouroboros (wired)

Blender version: 2.78c

I can confirm this issue. When continuous grab is enabled, rotate, pan and zoom behaves erratically. Once it's disabled, it's smooth again. **System information:** macOS 10.12.5 Nvidia Titan X (Pascal) Mouse: Razer Ouroboros (wired) **Blender version**: 2.78c
Member

Added subscriber: @warhawk15

Added subscriber: @warhawk15

I can kind of reproduce this, when working in a heavy scene. In that cases the mouse cursor only moves when Blender redraws, and feels quite jumpy, though I'm not sure if it's what's being described in this ticket. Sometimes the mouse position goes out of sync with object being dragged.

Looking at the code, one possible issue is that we are both getting/setting the current mouse location, as well as handling queued up events. With a high frequency gaming mouse we might get more events in the queue lagging behind the current position, leading to mismatches. The same could happen with a heavy scene and slow redraws.

I can kind of reproduce this, when working in a heavy scene. In that cases the mouse cursor only moves when Blender redraws, and feels quite jumpy, though I'm not sure if it's what's being described in this ticket. Sometimes the mouse position goes out of sync with object being dragged. Looking at the code, one possible issue is that we are both getting/setting the current mouse location, as well as handling queued up events. With a high frequency gaming mouse we might get more events in the queue lagging behind the current position, leading to mismatches. The same could happen with a heavy scene and slow redraws.
Author

I made a quick screen capture on this: link to youtube

I made a quick screen capture on this: [link to youtube ](https://youtu.be/PSFncDYgJj8)

This issue was referenced by 8b2785bda5

This issue was referenced by 8b2785bda5bd077548044acb307e17b376649051

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

I could test it with a gaming mouse now and the issue is much worse then. I found a fix now, mouse motion should be always smooth now, both for gaming mouse and heavy scenes and other mouse.

I could test it with a gaming mouse now and the issue is much worse then. I found a fix now, mouse motion should be always smooth now, both for gaming mouse and heavy scenes and other mouse.

Added subscribers: @dpombo, @Sergey

Added subscribers: @dpombo, @Sergey
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49498
No description provided.